clusters/dev/release/apps/tmf-platform-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tmf-platform
  namespace: tmf
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tmf-platform-bff
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tmf-platform-demo-ui
                port:
                  number: 80
